# siphon

./: README.md  TAGS  data.csv  siphon.cabal  stack.yaml
src/Siphon/: Decode.hs  Encode.hs  Misc.hs  Parser.hs  Test.hs  Types.hs
src/Siphon/Cell/: Text.hs
src/Siphon/Encode/: Text.hs
