name:                siphon
version:             0.1.0.0
synopsis:            CSV Parsing
description:         Please see README.md
homepage:            https://github.com/mckeankylej/siphon#readme
license:             BSD3
license-file:        LICENSE
author:              Kyle McKean
maintainer:          mckean.kylej@gmail.com
copyright:           2016 Kyle McKean
category:            Parsing
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  ghc-options:         -Wall
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable siphon
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N -02
  build-depends:       base
                     , siphon
  default-language:    Haskell2010

test-suite siphon-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , siphon
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/mckeankylej/siphon
